--- a/templates/word/index.html.twig
+++ b/templates/word/index.html.twig
@@ -8,5 +8,8 @@
     <h1>Hello</h1>
 
     <p>Le mot que vous recherchez est {{word.letters}}</p>
+
+    <div id="board-container">
+    </div>
 </div>
 {% endblock %}
