--- a/templates/word/index.html.twig
+++ b/templates/word/index.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello !{% endblock %}
+{% block title %}MoMoMotus{% endblock %}
 
 {% block body %}
 
 <div class="container">
-    <h1>Hello</h1>
+    <h1>MoMoMotus</h1>
 
     <p>Le mot que vous recherchez est {{word.letters}}</p>
 
