Check word exists, error message, fill valid letters

--- a/templates/board/index.html.twig
+++ b/templates/board/index.html.twig
@@ -6,6 +6,7 @@
 
 <div class="container">
     <h1>MoMoMotus</h1>
+    <div id="error-container"></div>
     <div id="board-container">
     </div>
 </div>
